# keiba-ai

keiba-ai-ver1/: README.md  config.yaml  main.py  pyproject.toml
keiba-ai-ver1/data/: scraped_ids.txt
keiba-ai-ver1/data/processed/models/: lgb_model.txt  lgb_model_production.txt
keiba-ai-ver1/data/race_id_cache/: 202001.txt  202002.txt  202003.txt  202004.txt  202005.txt  202006.txt  202007.txt  202008.txt  202009.txt  202010.txt  202011.txt  202012.txt  202101.txt  202102.txt  202103.txt  202104.txt  202105.txt  202106.txt  202107.txt  202108.txt  202109.txt  202110.txt  202111.txt  202112.txt  202201.txt  202202.txt  202203.txt  202204.txt  202205.txt  202206.txt  202207.txt  202208.txt  202209.txt  202210.txt  202211.txt  202212.txt  202301.txt  202302.txt  202303.txt  202304.txt  (+35 more)
keiba-ai-ver1/data/raw/horses/: 2009100502.parquet  2010101161.parquet  2010101667.parquet  2010101798.parquet  (+18224 more)
keiba-ai-ver1/notebooks/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_model_evaluation.ipynb
keiba-ai-ver1/src/betting/: bet_optimizer.py  bet_reporter.py  kelly.py
keiba-ai-ver1/src/features/: course_features.py  feature_pipeline.py  horse_features.py  jockey_features.py  raw_loader.py
keiba-ai-ver1/src/model/: evaluator.py  model_store.py  predictor.py  trainer.py
keiba-ai-ver1/src/odds/: browser_manager.py  odds_parser.py  realtime_odds_fetcher.py
keiba-ai-ver1/src/scraper/: async_pipeline.py  base_scraper.py  horse_history_scraper.py  pipeline.py  race_id_collector.py  race_meta_fixer.py  race_result_scraper.py  shutuba_scraper.py
(+21580 files in other folders)
